--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "typeorm": "0.2.25"
   },
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node-dev src/index.ts"
   }
 }
