--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.25"
